All_Component_DX/force-app/main/default/objects/Coverage_Summary__c/Coverage_Summary__c.object-meta.xml
<CustomObject>
    <label>Coverage Summary</label>
    <nameField>
        <displayFormat>CVG-{00000}</displayFormat>
        <label>Coverage Summary Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>