All_Component_DX/force-app/main/default/objects/Coverage_Summary__c/fields/Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Code_Coverage__c</fullName>
    <formula>Covered_Lines__c  /  Total_Lines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>