All_Component_DX/force-app/main/default/objects/Coverage_Summary__c/fields/No_Of_Failed_UT__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Failed_UT__c</fullName>
    <label>No Of Failed UT</label>
    <summaryFilterItems>
        <field>Coverage_Details__c.Unit_Test_Failed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Coverage_Details__c.Coverage_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>