All_Component_DX/force-app/main/default/objects/Coverage_Summary__c/fields/Total_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Lines__c</fullName>
    <label>Total Lines</label>
    <summarizedField>Coverage_Details__c.Total_Lines__c</summarizedField>
    <summaryForeignKey>Coverage_Details__c.Coverage_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>