All_Component_DX/force-app/main/default/objects/Coverage_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Coverage_On__c</columns>
    <columns>NAME</columns>
    <columns>Code_Coverage__c</columns>
    <columns>No_Of_Failed_UT__c</columns>
    <columns>Covered_Lines__c</columns>
    <columns>Total_Lines__c</columns>
    <columns>No_Of_Files__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>